option('ui', type : 'boolean', value : true, description : 'Enable GTK+ extension and tools')
option('gtksourceview', type : 'boolean', value : false, description : 'Enable using GtkSourceView')
option('help', type : 'boolean', value : true, description : 'Enable building help (GdaBrowser)')
option('goocanvas', type : 'boolean', value : false, description : 'Enable using GooCanvas')
option('graphviz', type : 'boolean', value : false, description : 'Enable using Graphviz')
option('json', type : 'boolean', value : true, description : 'Enable support for JSON')
option('sqlcipher', type : 'boolean', value : true, description : 'Build SQLCipher database provider')
option('libsoup', type : 'boolean', value : true, description : 'Enable libsoup support')
option('libsecret', type : 'boolean', value : false, description : 'Enable libsecret support')
option('examples', type : 'boolean', value : false, description : 'Compile examples')
option('tools', type : 'boolean', value : false, description : 'Enable build experimental GUI Tools')
option('glade', type : 'boolean', value : false, description : 'Enable using glade')
option('glade-catalog-dir', type : 'string', value : '', description : 'Use the given directory to install glade catalog files. If glade is not available this option is ignored. If it is not given the value from pkg-config will be used')
option('glade-pixmap-dir', type : 'string', value : '', description : 'Use the given directory to install glade pixmap files. If glade is not available this option is ignored. If it is not given the value from pkg-config will be used')
option('doc', type : 'boolean', value : false, description : 'Build documentation generation')
option('experimental', type : 'boolean', value : false, description : 'Enable experimental features')
option('ldap', type : 'boolean', value : false, description : 'Enable experimental LDAP provider')
option('web', type : 'boolean', value : false, description : 'Enable experimental WEB provider')
option('flatpak', type : 'boolean', value : false, description : 'Build Flatpak')
option('vapi', type : 'boolean', value : true, description : 'Enable Vala bindings and documentation')
option('postgres', type : 'boolean', value : true, description : 'Native PostgresSQL provider')
option('mysql', type : 'boolean', value : true, description : 'Native MySQL provider')
